SCSS version was missing the social icons

--- a/scss/entypo-plus.scss
+++ b/scss/entypo-plus.scss
@@ -1309,3 +1309,307 @@ $entypoPlusWebfontPath: '../fonts/' !default;
 	content: "\e740";
 }
 
+.icon-px-with-circle:before {
+	content: "\e741";
+}
+
+.icon-px:before {
+	content: "\e742";
+}
+
+.icon-basecamp:before {
+	content: "\e743";
+}
+
+.icon-behance:before {
+	content: "\e744";
+}
+
+.icon-creative-cloud:before {
+	content: "\e745";
+}
+
+.icon-dribbble-with-circle:before {
+	content: "\e746";
+}
+
+.icon-dribbble:before {
+	content: "\e747";
+}
+
+.icon-dropbox:before {
+	content: "\e748";
+}
+
+.icon-evernote:before {
+	content: "\e749";
+}
+
+.icon-facebook-with-circle:before {
+	content: "\e74a";
+}
+
+.icon-facebook:before {
+	content: "\e74b";
+}
+
+.icon-flattr:before {
+	content: "\e74c";
+}
+
+.icon-flickr-with-circle:before {
+	content: "\e74d";
+}
+
+.icon-flickr:before {
+	content: "\e74e";
+}
+
+.icon-foursquare:before {
+	content: "\e74f";
+}
+
+.icon-github-with-circle:before {
+	content: "\e750";
+}
+
+.icon-github:before {
+	content: "\e751";
+}
+
+.icon-google-drive:before {
+	content: "\e752";
+}
+
+.icon-google-hangouts:before {
+	content: "\e753";
+}
+
+.icon-google-with-circle:before {
+	content: "\e754";
+}
+
+.icon-google:before {
+	content: "\e755";
+}
+
+.icon-grooveshark:before {
+	content: "\e756";
+}
+
+.icon-icloud:before {
+	content: "\e757";
+}
+
+.icon-instagram-with-circle:before {
+	content: "\e758";
+}
+
+.icon-instagram:before {
+	content: "\e759";
+}
+
+.icon-lastfm-with-circle:before {
+	content: "\e75a";
+}
+
+.icon-lastfm:before {
+	content: "\e75b";
+}
+
+.icon-linkedin-with-circle:before {
+	content: "\e75c";
+}
+
+.icon-linkedin:before {
+	content: "\e75d";
+}
+
+.icon-medium-with-circle:before {
+	content: "\e75e";
+}
+
+.icon-medium:before {
+	content: "\e75f";
+}
+
+.icon-mixi:before {
+	content: "\e760";
+}
+
+.icon-onedrive:before {
+	content: "\e761";
+}
+
+.icon-paypal:before {
+	content: "\e762";
+}
+
+.icon-picasa:before {
+	content: "\e763";
+}
+
+.icon-pinterest-with-circle:before {
+	content: "\e764";
+}
+
+.icon-pinterest:before {
+	content: "\e765";
+}
+
+.icon-qq-with-circle:before {
+	content: "\e766";
+}
+
+.icon-qq:before {
+	content: "\e767";
+}
+
+.icon-raft-with-circle:before {
+	content: "\e768";
+}
+
+.icon-raft:before {
+	content: "\e769";
+}
+
+.icon-rainbow:before {
+	content: "\e76a";
+}
+
+.icon-rdio-with-circle:before {
+	content: "\e76b";
+}
+
+.icon-rdio:before {
+	content: "\e76c";
+}
+
+.icon-renren:before {
+	content: "\e76d";
+}
+
+.icon-scribd:before {
+	content: "\e76e";
+}
+
+.icon-sina-weibo:before {
+	content: "\e76f";
+}
+
+.icon-skype-with-circle:before {
+	content: "\e770";
+}
+
+.icon-skype:before {
+	content: "\e771";
+}
+
+.icon-slideshare:before {
+	content: "\e772";
+}
+
+.icon-smashing:before {
+	content: "\e773";
+}
+
+.icon-soundcloud:before {
+	content: "\e774";
+}
+
+.icon-spotify-with-circle:before {
+	content: "\e775";
+}
+
+.icon-spotify:before {
+	content: "\e776";
+}
+
+.icon-stumbleupon-with-circle:before {
+	content: "\e777";
+}
+
+.icon-stumbleupon:before {
+	content: "\e778";
+}
+
+.icon-swarm:before {
+	content: "\e779";
+}
+
+.icon-tripadvisor:before {
+	content: "\e77a";
+}
+
+.icon-tumblr-with-circle:before {
+	content: "\e77b";
+}
+
+.icon-tumblr:before {
+	content: "\e77c";
+}
+
+.icon-twitter-with-circle:before {
+	content: "\e77d";
+}
+
+.icon-twitter:before {
+	content: "\e77e";
+}
+
+.icon-vimeo-with-circle:before {
+	content: "\e77f";
+}
+
+.icon-vimeo:before {
+	content: "\e780";
+}
+
+.icon-vine-with-circle:before {
+	content: "\e781";
+}
+
+.icon-vine:before {
+	content: "\e782";
+}
+
+.icon-vk-alternitive:before {
+	content: "\e783";
+}
+
+.icon-vk-with-circle:before {
+	content: "\e784";
+}
+
+.icon-vk:before {
+	content: "\e785";
+}
+
+.icon-xing-with-circle:before {
+	content: "\e786";
+}
+
+.icon-xing:before {
+	content: "\e787";
+}
+
+.icon-yelp:before {
+	content: "\e788";
+}
+
+.icon-youko-with-circle:before {
+	content: "\e789";
+}
+
+.icon-youko:before {
+	content: "\e78a";
+}
+
+.icon-youtube-with-circle:before {
+	content: "\e78b";
+}
+
+.icon-youtube:before {
+	content: "\e78c";
+}
+
